# SimFab

./: .gitignore  CMakeLists.txt  Frosty.cpp  Test.cpp  airgap.cpp  deposition.cpp  geomadvection.cpp  pattern.cpp  periodBC.cpp  test2.cpp
Documentation/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc
Task2/: CMakeLists.txt  task2.cpp
Task3/: CMakeLists.txt  task3.cpp
